--- a/schema/index.html
+++ b/schema/index.html
@@ -17,11 +17,15 @@
 
     <p><a href="http://en.wikipedia.org/wiki/Microdata_(HTML)">Microdata</a> provides a way for organizations to add structured data to the web versions of their buyer's guides, making it easier to write programs that help consumers integrate these guides into their buying decisions. However, current microdata schemas aren't sufficient to support buyer's guides.</p>
 
-    <h2>Proposed new classes and extensions</h2>
+    <h2>Proposed New Classes and Additional Properties</h2>
 
-    <p>New classes: The core of this schema is the <a href="BuyersGuide">BuyersGuide</a> class, which contains a list of <a href="Judgment">Judgment</a>s of one or more targets. Judgments have a <a href="JudgmentType">JudgmentType</a>, which is an enumeration with one of the following values: <a href="Bad">Bad</a>, <a href="Good">Good</a>, <a href="Improving">Improving</a>, <a href="MixedBag">MixedBag</a>, or <a href="Worsening">Worsening</a>. (See <a href="Judgment">Judgment</a> for more information about why we don't just use <a href="http://schema.org/Rating">schema.org/Rating</a>).</p>
+    <p>The core of this schema is the <a href="BuyersGuide">BuyersGuide</a> class.</p>
 
-    <p>We also propose extensions to existing classes from <a href="http://schema.org/">schema.org</a>:</p>
+    <p>BuyersGuides contain <a href="Judgment">Judgment</a>s of one or more companies, brands, products, etc. <a href="Judgment">Judgment</a> is a subclass of the standard <a href="http://schema.org/Review">schema.org/Review</a> class.</p>
+
+    <p>Judgments have a <a href="JudgmentType">JudgmentType</a>, which is an enumeration with one of the following values: <a href="Bad">Bad</a>, <a href="Good">Good</a>, <a href="Improving">Improving</a>, <a href="MixedBag">MixedBag</a>, or <a href="Worsening">Worsening</a>. (See <a href="Judgment">Judgment</a> for more information about why we don't just use <a href="http://schema.org/Rating">schema.org/Rating</a>.)</p>
+
+    <p>We also propose adding additional properties to the following <a href="http://schema.org/">schema.org</a> classes:</p>
 
     <ul>
       <li><a href="Brand">Brand</a>
