include the fact that Judgments can target local businesses

--- a/schema/index.html
+++ b/schema/index.html
@@ -21,7 +21,7 @@
 
     <p>The core of this schema is the <a href="BuyersGuide">BuyersGuide</a> class.</p>
 
-    <p>BuyersGuides contain <a href="Judgment">Judgment</a>s of one or more companies, brands, products, etc. <a href="Judgment">Judgment</a> is a subclass of the standard <a href="http://schema.org/Review">schema.org/Review</a> class.</p>
+    <p>BuyersGuides contain <a href="Judgment">Judgment</a>s of one or more companies, brands, products, local businesses, etc. <a href="Judgment">Judgment</a> is a subclass of the standard <a href="http://schema.org/Review">schema.org/Review</a> class.</p>
 
     <p>Judgments have a <a href="JudgmentType">JudgmentType</a>, which is an enumeration with one of the following values: <a href="Bad">Bad</a>, <a href="Good">Good</a>, <a href="Improving">Improving</a>, <a href="MixedBag">MixedBag</a>, or <a href="Worsening">Worsening</a>. (See <a href="Judgment">Judgment</a> for more information about why we don't just use <a href="http://schema.org/Rating">schema.org/Rating</a>.)</p>
 
